@@ -22,6 +22,7 @@
 """Store global configuration information"""
 
 import os
+import sys
 import socket
 
 
@@ -314,3 +315,10 @@ file_changed = None
 
 # delay (in seconds) before next operation after failure
 backend_retry_delay = 30
+
+# default filesystem encoding
+# In Python 2 it seems that sys.getfilesystemencoding() will normally return
+# 'utf-8' or some other sane encoding, but will sometimes fail and return
+# either 'ascii' or None.  Both are bogus, so default to 'utf-8' if it does.
+fsencoding = sys.getfilesystemencoding()
+fsencoding = fsencoding if fsencoding not in ['ascii', None] else 'utf-8'
